# kepler-slim

./: LICENSE  README.md  SLIMMING.md  package.json
.github/: CODEOWNERS
.github/workflows/: pr-build.yml  slim-release.yml
bindings/kepler.gl-jupyter/: Dockerfile  README.md  pyproject.toml  requirements.txt
bindings/python/: DEVELOPMENT.md  README.md  esbuild.config.mjs  pyproject.toml  tsconfig.json
bindings/python/keplergl/: _html_export.py  widget.py
bindings/python/tests/: test_html_export.py  test_serializers.py  test_widget.py
contributing/: README.md
esbuild/: analyze.mjs  umd-slim.config.mjs
examples/hex-slim-embed/: README.md  kepler_hex.py
